--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongojs": "^3.1.0",
     "mongoose": "^5.10.14",
     "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "node": "6.14.6"
   }
 }
